fixed spacing

--- a/style.css
+++ b/style.css
@@ -28,25 +28,6 @@ body{
     fill: #00000020;
 }
 
-.curve-2 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
-}
-
-.curve-2 svg {
-    position: relative;
-    display: block;
-    width: calc(100% + 1.3px);
-    height: 172px;
-}
-
-.curve-2 .shape-fill {
-    fill: #000000D4;
-}
 
 /*This was before for section just for reference*/
 .middle{
